package com.simpulator.game.levels;

public enum LevelId {
    TUTORIAL,
    LEVEL_1,
    LEVEL_2,
}
