package com.simpulator.game.levels.levels;

import com.badlogic.gdx.math.Quaternion;
import com.badlogic.gdx.math.Vector3;
import com.simpulator.engine.graphics.GraphicsManager;
import com.simpulator.engine.scene.MusicManager;
import com.simpulator.engine.scene.SceneManager;
import com.simpulator.game.entities.MerchantEntity;
import com.simpulator.game.language.Language;
import com.simpulator.game.levels.Level;
import com.simpulator.game.levels.LevelId;
import com.simpulator.game.levels.LevelManager;
import com.simpulator.game.levels.MerchantData;
import com.simpulator.game.levels.maps.TutorialMap;
import com.simpulator.game.scenes.ExploreScene;
import com.simpulator.game.scenes.TutorialScene;
import com.simpulator.game.trading.Item;
import java.util.Arrays;
import java.util.HashSet;

public class TutorialLevel extends Level {

    public TutorialLevel() {
        super(
            LevelId.TUTORIAL,
            LevelId.LEVEL_1,
            "Tutorial",
            "Skyboxes/miramar",
            "GameAudio.ogg",
            13,
            new Item[] { Item.TRINKET, Item.FISH },
            new Vector3(0, 1, 0),
            new Quaternion().idt(),
            new TutorialMap(),
            new MerchantConfig[] {
                new MerchantConfig(
                    MerchantEntity.class,
                    new Vector3(0, 0, 2),
                    new MerchantData(
                        "Friendly Guide",
                        "guide.png",
                        Language.ENGLISH,
                        "Welcome to Harbour Franca! Let's make a simple trade. I would pay\nanything for a trinket.",
                        "Thank you!",
                        "I'll only pay slightly more for that.",
                        "No, the value difference is too great! Our deal is off.",
                        "Too slow! It seems you do not have that iron in you!",
                        1000f,
                        1.5f,
                        new Item[] { Item.FISH, Item.PENDANT, Item.CANDLE },
                        new HashSet<>(Arrays.asList(Item.TRINKET)),
                        "This is a hint"
                    )
                ),
            },
            new Vector3[] {}
        );
    }

    @Override
    public ExploreScene createScene(
        SceneManager sceneManager,
        GraphicsManager graphics,
        LevelManager levelManager,
        MusicManager musicManager
    ) {
        return new TutorialScene(
            sceneManager,
            graphics,
            levelManager,
            musicManager,
            this
        );
    }
}
